Fixed markdown comment rendering. + Added collapsable text to comments.

--- a/themes/HumHub/css/theme.css
+++ b/themes/HumHub/css/theme.css
@@ -1891,6 +1891,15 @@ table td a:hover {
 .comment .jp-play-bar {
   background: #cacaca;
 }
+.comment-container .content_edit {
+  margin-left: 50px;
+}
+.comment_edit_content {
+  margin-left: 50px;
+}
+.comment-message {
+  overflow: hidden;
+}
 .grid-view img {
   width: 24px;
   height: 24px;
